src/pages/00-global.sass
@import "fonts/B612-Regular/B612.css"
@import "fonts/Inter/inter.css"

\:root
    --oasis-blue: rgb(0, 120, 180)
    --dark-red: darkred
    --text-color: #f0f0f0

body
    color: var(--text-color)
    display: grid
    font-family: InterVariable, sans-serif, font-optical-sizing auto
    grid-template-columns: repeat(4, 1fr)
    margin: 0 auto
    max-width: 1024px
    padding: 0 1rem
    gap: 2rem
    visibility: visible

    img
        border-radius: 5px

    main
        grid-column: 1 / 5

        >p:first-child
            margin-top: 0

        >h1:first-child, >h2:first-child, >h3:first-child, >h4:first-child, >h5:first-child, >h6:first-child
            margin-top: 0

h1, h2, h3, h4, h5, h6
    font-family: B612-Regular, serif

h1
    font-size: 3.157rem

h2
    font-size: 2.369rem

h3
    font-size: 1.777rem

h4
    font-size: 1.333rem

h5
    font-size: 1rem
    font-weight: bold

a
    color: var(--oasis-blue)
    text-decoration: none

blockquote
    font-style: italic

